--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/users_mgmt.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/users_mgmt.html
@@ -24,13 +24,13 @@
 
 {% block body_content %}
   <div id="userMgmtAlertModal" class="reveal-modal medium alert-box radius" data-reveal data-alert>
-    <h5 id="userMgmtAlertModalLabel"> </h5> <br/>
+    <h5 id="userMgmtAlertModalLabel" class="text-center"> </h5> <br/>
     <div class="row text-center">
       <div class="small-6 columns">
         <label>Enter Password </label>
       </div>
       <div class="small-6 columns">
-        <input type="text" class="password1" />
+        <input type="password" class="password1" />
       </div>
     </div>
     <div class="row text-center">
@@ -38,7 +38,7 @@
         <label>Re-Enter Password </label>
       </div>
       <div class="small-6 columns">
-        <input type="text" class="password2" />
+        <input type="password" class="password2" />
       </div>
     </div>
     <div class="text-center">
@@ -63,7 +63,8 @@
       </div>
       <div class="small-4 columns end" style="display: inline-block;  ">
         <input type="text" class="student_name small-6 columns" value="" placeholder="Enter atleast 3 letters to search">
-        <input type="button" class="small radius button search_stud_btn" value="Find Students" />
+        <input type="button" class="tiny radius button search_stud_btn" value="Find Students" />
+        <a href="{% url 'groupchange' group_name %}" class="tiny radius button">Cancel</a>
       </div>
     </div>
   </div>
@@ -91,7 +92,7 @@
             $("#student_data_set_div").html("")
             data = JSON.parse(data)
             if(data.length > 0){
-              $("#student_count_div").html("Total "+ data.length+" student found.")
+              $("#student_count_div").html("Total "+ data.length+" student(s) found.")
               var stud_table = document.createElement('table');
               outer_div = document.getElementById("student_data_set_div");
               stud_table.style.width = "100%"
@@ -136,10 +137,12 @@
     })
 
     $(document).on('click','.change_pass', function(event){
+      $(".password1").val("")
+      $(".password2").val("")
       student_id = $(this).closest('tr').attr('id')
       $("#student-id-pass-change").attr('value', student_id)
       student_name = $("#"+ student_id).children('.username').text()
-      $("#userMgmtAlertModalLabel").text("Change Password Request for : "+ student_name);
+      $("#userMgmtAlertModalLabel").text("Change Password for User: "+ student_name);
       $("#userMgmtAlertModal").foundation('reveal', 'open');
 
     })
