--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/simple_card.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/simple_card.html
@@ -112,7 +112,7 @@
     <!-- suppy no_description=True for not having description -->
     {% if not no_description %}
       <div class="scard-desc" title="{{resource.content_org}}">
-       {{resource.content|safe|default_if_none:"Add some description."|truncatechars:50}}
+       {{resource.content|safe|striptags|default_if_none:"Add some description."|truncatechars:50}}
       </div>
     {% endif %}
 </div>
@@ -126,7 +126,7 @@
       {{resource.created_by|get_username|truncatechars:"10"}}</a>
      {% endif %}
          <i style="float:right">{{resource.created_at|date:"d-m-Y"}}</i>
-     {% if gstaff_access or user.is_authenticated and is_course_card == "True" %}
+     {% if user.is_authenticated  %}
       {% if not no_checkbox  %}
         </a> <input type="checkbox" style="margin:0; float:left;" class="filenode" name="filenode" value="{{resource.pk}}">
       {% endif %}
