--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/user_course_analytics.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/user_course_analytics.html
@@ -208,3 +208,10 @@
     </div>
   </div>
 </div>
+
+
+<script type="text/javascript">
+    $(document).ready(function() {
+      generateGraph({{users_points_breakup|safe}})
+    })
+</script>
