--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/user_course_analytics.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/user_course_analytics.html
@@ -212,6 +212,10 @@
 
 <script type="text/javascript">
     $(document).ready(function() {
-      generateGraph({{users_points_breakup|safe}})
+      var points_dict = {{users_points_breakup|safe}}
+      if (points_dict.hasOwnProperty('Total')){
+        delete points_dict['Total']
+      }
+      generateGraph(points_dict)
     })
 </script>
