color changed of group name in second level header

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header.html
@@ -431,7 +431,7 @@
                                     <img src="/static/ndf/images/metaStudio-profile.svg" alt="Profile picture for this group."  height="20px" width="20px" >
                           {% endif %}
 
-                          <span>{% firstof group_object.altnames|truncatechars:7 group_object.name|truncatechars:7 %}</span>
+                          <span style="color:black!important">{% firstof group_object.altnames|truncatechars:7 group_object.name|truncatechars:7 %}</span>
                     </a>
                   </h1>
                 </li>
