--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/simple_card.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/simple_card.html
@@ -130,7 +130,7 @@
      {% endif %}
          <i style="float:right">{{resource.created_at|date:"d-m-Y"}}</i>
      
-     {% if user.is_authenticated  and not group_object.edit_policy == "NON_EDITABLE"  %} 
+     {% if user.is_authenticated  and not group_object.edit_policy == "NON_EDITABLE"  or gstaff_access %} 
       {% if not no_checkbox  %}
         </a> <input type="checkbox" style="margin:0; float:left;" class="filenode" name="filenode" value="{{resource.pk}}">
       {% endif %}
